--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@ Here you will find the best get well soon wishes and quotes. They will express y
 
 <div class="row">
   <div class="column">
-<a href="/get-well-wishes"> <img class="img" src="/img/get-well-soon-wishes.png" alt="get well soon wishes" /></a>
-<h2><a class="page-link" href="/get-well-wishes">Top 100 Get Well Wishes</a></h2>
+<a href="/get-well-wishes/"> <img class="img" src="/img/get-well-soon-wishes.png" alt="get well soon wishes" /></a>
+<h2><a class="page-link" href="/get-well-wishes/">Top 100 Get Well Wishes</a></h2>
 </div>
 
 <div class="column">
-<a href="/get-well-soon-messages-for-a-friend"> <img class="img" src="/img/get-well-soon-messages-for-a-friend.png" alt="get well soon messages for a friend" /></a>
-<h2><a class="page-link" href="/get-well-soon-messages-for-a-friend">Get Well Soon Messages for a Friend</a></h2>
+<a href="/get-well-soon-messages-for-a-friend/"> <img class="img" src="/img/get-well-soon-messages-for-a-friend.png" alt="get well soon messages for a friend" /></a>
+<h2><a class="page-link" href="/get-well-soon-messages-for-a-friend/">Get Well Soon Messages for a Friend</a></h2>
 </div>
 </div>
 
@@ -31,11 +31,11 @@ And if you know the person well who's ill or injured then you can consider using
 
 <div class="row">
   <div class="column">
-<a href="/get-well-soon-quotes"> <img class="img" src="/img/get-well-soon-quotes.png" alt="get well soon quotes" /></a><h2><a class="page-link" href="/get-well-soon-quotes/">Get Well Soon Quotes: 41 Touching and Uplifting Recovery Quotes</a></h2>
+<a href="/get-well-soon-quotes/"> <img class="img" src="/img/get-well-soon-quotes.png" alt="get well soon quotes" /></a><h2><a class="page-link" href="/get-well-soon-quotes/">Get Well Soon Quotes: 41 Touching and Uplifting Recovery Quotes</a></h2>
 </div>
 
 <div class="column">
-<a href="/funny-get-well-wishes"> <img class="img" src="/img/funny-get-well-wishes.png" alt="funny get well wishes and messages" /></a><h2><a class="page-link" href="/funny-get-well-wishes">Funny Get Well Soon Wishes and Messages</a></h2>
+<a href="/funny-get-well-wishes/"> <img class="img" src="/img/funny-get-well-wishes.png" alt="funny get well wishes and messages" /></a><h2><a class="page-link" href="/funny-get-well-wishes/">Funny Get Well Soon Wishes and Messages</a></h2>
 </div>
 </div>
 
@@ -92,39 +92,39 @@ If the sick or injured person is religious then a prayer may be the perfect way 
 
 <div class="row">
   <div class="column">
-    <a href="/get-well-poems"> <img class="img" src="/img/get-well-poems.png" alt="get well poems" /></a><h2><a class="page-link" href="/get-well-poems">Get Well Soon Poems: 21 Lovely Ways to Say Get Better</a></h2>
+    <a href="/get-well-poems/"> <img class="img" src="/img/get-well-poems.png" alt="get well poems" /></a><h2><a class="page-link" href="/get-well-poems/">Get Well Soon Poems: 21 Lovely Ways to Say Get Better</a></h2>
 </div>
 
 <div class="row">
   <div class="column">
-    <a href="/get-well-prayers"> <img class="img" src="/img/get-well-prayers.png" alt="get well prayers" /></a><h2><a class="page-link" href="/get-well-prayers">34 Get Well Soon Prayers: Christian Ways to say 'Feel Better'</a></h2>
+    <a href="/get-well-prayers/"> <img class="img" src="/img/get-well-prayers.png" alt="get well prayers" /></a><h2><a class="page-link" href="/get-well-prayers/">34 Get Well Soon Prayers: Christian Ways to say 'Feel Better'</a></h2>
 </div>
 </div>
 
 <h3>Other Get Well Resources:</h3>
 <div class="row">
 <div class="column3">
-  <a href="/get-well-soon-text-messages"> <img class="img" src="/img/get-well-text-messages-300x200.png" alt="get well soon text meddages sms" /></a>
-  <a class="page-link2" href="/get-well-text-messages"><h3>Get Well Soon Text Messages</h3></a>
+  <a href="/get-well-soon-text-messages/"> <img class="img" src="/img/get-well-text-messages-300x200.png" alt="get well soon text meddages sms" /></a>
+  <a class="page-link2" href="/get-well-soon-text-messages/"><h3>Get Well Soon Text Messages</h3></a>
   </div>
   <div class="column3">
-  <a href="/get-well-soon-messages-after-surgery"> <img class="img" src="/img/get-well-soon-messages-after-surgery-300x200.png" alt="get well soon messages for after surgery" /></a>
-   <a class="page-link2" href="/get-well-soon-messages-after-surgery"> <h3>Get Well Soon Messages after Surgery</h3></a>
+  <a href="/get-well-soon-messages-after-surgery/"> <img class="img" src="/img/get-well-soon-messages-after-surgery-300x200.png" alt="get well soon messages for after surgery" /></a>
+   <a class="page-link2" href="/get-well-soon-messages-after-surgery/"> <h3>Get Well Soon Messages after Surgery</h3></a>
   </div>
   <div class="column3">
-  <a href="/get-well-soon-messages-for-a-pet"> <img class="img" src="/img/get-well-soon-messages-for-a-pet-300x200.png" alt="get well soonessages for a pet dog" /></a>
-   <a class="page-link2" href="/get-well-soon-messages-for-a-pet"><h3>Get Well Soon Messages for a Pet</h3></a>
+  <a href="/get-well-soon-messages-for-a-pet/"> <img class="img" src="/img/get-well-soon-messages-for-a-pet-300x200.png" alt="get well soonessages for a pet dog" /></a>
+   <a class="page-link2" href="/get-well-soon-messages-for-a-pet/"><h3>Get Well Soon Messages for a Pet</h3></a>
 </div>
 <div class="column3">
-  <a href="/get-well-gifts"> <img class="img" src="/img/get-well-gifts-300x200.png" alt="get well gift ideas" /></a>
-  <a class="page-link2" href="/get-well-gifts"><h3>Get Well Gift Ideas</h3></a>
+  <a href="/get-well-gifts/"> <img class="img" src="/img/get-well-gifts-300x200.png" alt="get well gift ideas" /></a>
+  <a class="page-link2" href="/get-well-gifts/"><h3>Get Well Gift Ideas</h3></a>
   </div>
   <div class="column3">
-  <a href="/get-well-flowers"> <img class="img" src="/img/get-well-flowers-300x200.png" alt="get well flowers and card" /></a>
-    <a class="page-link2" href="/get-well-flowers"> <h3>Get Well Flowers</h3></a>
+  <a href="/get-well-flowers/"> <img class="img" src="/img/get-well-flowers-300x200.png" alt="get well flowers and card" /></a>
+    <a class="page-link2" href="/get-well-flowers/"> <h3>Get Well Flowers</h3></a>
   </div>
   <div class="column3">
-  <a href="/get-well-jokes"> <img class="img" src="/img/get-well-jokes-300x200.png" alt="get well jokes" /></a>
+  <a href="/get-well-jokes/"> <img class="img" src="/img/get-well-jokes-300x200.png" alt="get well jokes" /></a>
    <a class="page-link2" href="/get-well-jokes/"><h3>Get Well Jokes</h3></a>
 </div>
 </div>
