--- a/crotchet-files/get-well-index2.html
+++ b/crotchet-files/get-well-index2.html
@@ -34,20 +34,25 @@
 
   <a class="sharing-button googleplus" href="https://plus.google.com/share?url=http://www.crotchet.net/test-post/" rel="nofollow" target="_blank" title="Share on Google Plus">Google+</a>
 
-		<nav>
-			<ul class='clearfix'>
-				<li><a href="#">Home</a></li>
-				<li><a href="#">Get Well Wishes</a></li>
-				<li><a href="#">For Friends</a></li>
-				<li><a href="#">After Surgery</a></li>
-        <li><a href="#">For Pets</a></li>
-        <li><a href="#">Quotes</a></li>
-        <li><a href="#">Poems</a></li>
-        <li><a href="#">Prayers</a></li>
-        <li><a href="#">Jokes</a></li>
-			</ul>
-			<a href="#" id='drop'>Menu<i class='icon-reorder'></i></a>
-		</nav>        
+		<nav role="navigation" id="nav">
+              <input class="trigger" type="checkbox" id="mainNavButton">
+              <label for="mainNavButton" onclick>Menu</label>
+              <ul>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">About</a>
+                <li><a href="#">Get Well Wishes</a></li>
+                <li><a href="#">Funny Wishes</a></li>
+                <li><a href="#">For Friends</a></li>
+								<li><a href="#">After Surgery</a></li>
+								<li><a href="#">For Pets</a></li>
+                <li><a href="#">Quotes</a></li>
+								<li><a href="#">Poems</a></li>
+								<li><a href="#">Prayers</a></li>
+								<li><a href="#">Text Messages</a></li>
+								<li><a href="#">Jokes</a></li>
+								<li><a href="#">Images</a></li>
+              
+              </ul> 
         
 </div>
 
