--- a/crotchet-files/get-well-index2.html
+++ b/crotchet-files/get-well-index2.html
@@ -34,25 +34,45 @@
 
   <a class="sharing-button googleplus" href="https://plus.google.com/share?url=http://www.crotchet.net/test-post/" rel="nofollow" target="_blank" title="Share on Google Plus">Google+</a>
 
-		<nav role="navigation" id="nav">
-              <input class="trigger" type="checkbox" id="mainNavButton">
-              <label for="mainNavButton" onclick>Menu</label>
-              <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">About</a>
-                <li><a href="#">Get Well Wishes</a></li>
-                <li><a href="#">Funny Wishes</a></li>
-                <li><a href="#">For Friends</a></li>
-								<li><a href="#">After Surgery</a></li>
-								<li><a href="#">For Pets</a></li>
-                <li><a href="#">Quotes</a></li>
-								<li><a href="#">Poems</a></li>
-								<li><a href="#">Prayers</a></li>
-								<li><a href="#">Text Messages</a></li>
-								<li><a href="#">Jokes</a></li>
-								<li><a href="#">Images</a></li>
-              
-              </ul> 
+		<a href="#main-menu"
+     class="menu-toggle"
+     role="button"
+     id="main-menu-toggle"
+     aria-expanded="false"
+     aria-controls="main-menu"
+     aria-label="Open main menu">
+    <span class="sr-only">Open main menu</span>
+    <span class="fa fa-bars" aria-hidden="true"></span>
+  </a>
+  
+  <h1 class="logo">hamburgers</h1>
+  
+  <nav id="main-menu"
+       class="main-menu"
+       role="navigation"
+       aria-expanded="false"
+       aria-label="Main menu">
+    <a href="#main-menu-toggle"
+       class="menu-close"
+       role="button"
+       id="main-menu-close"
+       aria-expanded="false"
+       aria-controls="main-menu"
+       aria-label="Close main menu">
+      <span class="sr-only">Close main menu</span>
+      <span class="fa fa-close" aria-hidden="true"></span>
+    </a>
+    <ul>
+      <li><a href="#">Products</a></li>
+      <li><a href="#">About</a></li>
+      <li><a href="#">Contact</a></li>
+    </ul>
+  </nav>
+  <a href="#main-menu-toggle"
+     class="backdrop"
+     tabindex="-1"
+     aria-hidden="true"
+     hidden></a>			 
         
 </div>
 
