--- a/crotchet-files/get-well-index2.html
+++ b/crotchet-files/get-well-index2.html
@@ -40,7 +40,7 @@
      id="main-menu-toggle"
      aria-expanded="false"
      aria-controls="main-menu"
-     aria-label="Open main menu">Test
+     aria-label="Open main menu">Open Menu
     <span class="sr-only">Open main menu</span>
     <span class="fa fa-bars" aria-hidden="true"></span>
   </a>
@@ -56,7 +56,7 @@
        id="main-menu-close"
        aria-expanded="false"
        aria-controls="main-menu"
-       aria-label="Close main menu">
+       aria-label="Close main menu">Close Menu
       <span class="sr-only">Close main menu</span>
       <span class="fa fa-close" aria-hidden="true"></span>
     </a>
