--- a/crotchet-files/get-well-index2.html
+++ b/crotchet-files/get-well-index2.html
@@ -42,7 +42,7 @@
      id="main-menu-toggle"
      aria-expanded="false"
      aria-controls="main-menu"
-     aria-label="Open main menu">Open Menu
+     aria-label="Open main menu">Menu
     <span class="sr-only">Open main menu</span>
     <span class="fa fa-bars" aria-hidden="true"></span>
   </a>
@@ -63,8 +63,8 @@
       <span class="fa fa-close" aria-hidden="true"></span>
     </a>
     <ul>
-      <li><a href="#">Products</a></li>
-      <li><a href="#">About</a></li>
+      <li><a href="#">Get Well Wishes</a></li>
+      <li><a href="#">Funny</a></li>
       <li><a href="#">Contact</a></li>
     </ul>
   </nav>
