--- a/crotchet-files/get-well-index2.html
+++ b/crotchet-files/get-well-index2.html
@@ -36,43 +36,22 @@
 
   </div>        
         
-		<a href="#main-menu"
-     class="menu-toggle"
-     role="button"
-     id="main-menu-toggle"
-     aria-expanded="false"
-     aria-controls="main-menu"
-     aria-label="Open main menu">Menu
-    <span class="sr-only">Open main menu</span>
-    <span class="fa fa-bars" aria-hidden="true"></span>
-  </a>
+		
   
-  <nav id="main-menu"
-       class="main-menu"
-       role="navigation"
-       aria-expanded="false"
-       aria-label="Main menu">
-    <a href="#main-menu-toggle"
-       class="menu-close"
-       role="button"
-       id="main-menu-close"
-       aria-expanded="false"
-       aria-controls="main-menu"
-       aria-label="Close main menu">Close Menu
-      <span class="sr-only">Close main menu</span>
-      <span class="fa fa-close" aria-hidden="true"></span>
-    </a>
-    <ul>
-      <li><a href="#">Get Well Wishes</a></li>
-      <li><a href="#">Funny</a></li>
-      <li><a href="#">Contact</a></li>
-    </ul>
-  </nav>
-  <a href="#main-menu-toggle"
-     class="backdrop"
-     tabindex="-1"
-     aria-hidden="true"
-     hidden></a>			 
+ <label for="toggle-1" class="toggle-menu"><ul><li></li> <li></li> <li></li></ul></label>
+<input type="checkbox" id="toggle-1">
+
+<nav>
+<ul>
+<li><a href="#logo"><i class="icon-home"></i>Home</a></li>
+<li><a href="#about"><i class="icon-user"></i>About</a></li>
+<li><a href="#portfolio"><i class="icon-thumbs-up-alt"></i>Portfolio</a></li>
+<li><a href="#services"><i class="icon-gear"></i>Services</a></li>
+<li><a href="#gallery"><i class="icon-picture"></i>Gallery</a></li>
+<li><a href="#contact"><i class="icon-phone"></i>Contact</a></li>
+</ul>
+</nav>
+  
 
 <p>
 When a friend or loved one is ill, has had surgery or is recovering from an injury the natural reaction is to want them to get well soon. You don't want to see someone you care about suffering or feeling poorly. So the way we try to cheer them up whilst they recover (aside from visiting them) is to send a get well soon message and gift. Something that can help lift their spirits and make them feel better as quickly as possible. 
