--- a/crotchet-files/get-well-index2.html
+++ b/crotchet-files/get-well-index2.html
@@ -38,19 +38,15 @@
         
 		
   
- <label for="toggle-1" class="toggle-menu"><ul><li></li> <li></li> <li></li></ul></label>
-<input type="checkbox" id="toggle-1">
-
-<nav>
-<ul>
-<li><a href="#logo"><i class="icon-home"></i>Home</a></li>
-<li><a href="#about"><i class="icon-user"></i>About</a></li>
-<li><a href="#portfolio"><i class="icon-thumbs-up-alt"></i>Portfolio</a></li>
-<li><a href="#services"><i class="icon-gear"></i>Services</a></li>
-<li><a href="#gallery"><i class="icon-picture"></i>Gallery</a></li>
-<li><a href="#contact"><i class="icon-phone"></i>Contact</a></li>
-</ul>
-</nav>
+<nav class="nav">
+  <input class="menu-btn" type="checkbox" id="menu-btn" />
+  <label class="menu-icon" for="menu-btn"><span class="navicon"></span></label>
+  <ul class="menu">
+    <li><a href="#work">Our Work</a></li>
+    <li><a href="#about">About</a></li>
+    <li><a href="#careers">Careers</a></li>
+    <li><a href="#contact">Contact</a></li>
+  </ul>
   
 
 <p>
