--- a/crotchet-files/get-well-index2.html
+++ b/crotchet-files/get-well-index2.html
@@ -47,7 +47,7 @@
     <li><a href="#careers">Careers</a></li>
     <li><a href="#contact">Contact</a></li>
   </ul>
-  
+  </nav>
 
 <p>
 When a friend or loved one is ill, has had surgery or is recovering from an injury the natural reaction is to want them to get well soon. You don't want to see someone you care about suffering or feeling poorly. So the way we try to cheer them up whilst they recover (aside from visiting them) is to send a get well soon message and gift. Something that can help lift their spirits and make them feel better as quickly as possible. 
