--- a/crotchet-files/get-well-index2.html
+++ b/crotchet-files/get-well-index2.html
@@ -38,15 +38,18 @@
         
 		
   
-<input type="checkbox" name="nav-btn" id="nav-btn" />
-<span></span>
-<nav>
- <ul>
- <li><a href="#">Home</a></li>
- <li><a href="#">Service</a></li>
- <li><a href="#">Portfolio</a></li>
- <li><a href="#">Contact</a></li>
- </ul>
+<nav id="site-navigation" aria-label="Menu">
+
+  <label for="toggle-mobile-menu" aria-label="Menu">&#9776;</label>
+  <input id="toggle-mobile-menu" type="checkbox" />
+
+  <ul id="main-menu">
+    <li><a href="#">Home</a></li>
+    <li><a href="#">Shop</a></li>
+    <li><a href="#">Blog</a></li>
+    <li><a href="#">About</a></li>
+    <li><a href="#">Contact</a></li>
+  </ul>
 </nav>
 
 
