--- a/crotchet-files/get-well-index2.html
+++ b/crotchet-files/get-well-index2.html
@@ -38,17 +38,14 @@
         
 		
   
-<nav id="site-navigation" aria-label="Menu">
-
-  <label for="toggle-mobile-menu" aria-label="Menu">&#9776;</label>
-  <input id="toggle-mobile-menu" type="checkbox" />
-
-  <ul id="main-menu">
-    <li><a href="#">Home</a></li>
-    <li><a href="#">Shop</a></li>
-    <li><a href="#">Blog</a></li>
-    <li><a href="#">About</a></li>
-    <li><a href="#">Contact</a></li>
+<nav class="nav">
+  <input class="menu-btn" type="checkbox" id="menu-btn" />
+  <label class="menu-icon" for="menu-btn"><span class="navicon"></span></label>
+  <ul class="menu">
+    <li><a href="#work">Our Work</a></li>
+    <li><a href="#about">About</a></li>
+    <li><a href="#careers">Careers</a></li>
+    <li><a href="#contact">Contact</a></li>
   </ul>
 </nav>
 
