--- a/crotchet-files/get-well-index2.html
+++ b/crotchet-files/get-well-index2.html
@@ -42,10 +42,10 @@
   <input class="menu-btn" type="checkbox" id="menu-btn" />
   <label class="menu-icon" for="menu-btn"><span class="navicon"></span></label>
   <ul class="menu">
-    <li><a href="#work">Our Work</a></li>
-    <li><a href="#about">About</a></li>
-    <li><a href="#careers">Careers</a></li>
-    <li><a href="#contact">Contact</a></li>
+    <li><a href="#work">Home</a></li>
+    <li><a href="#about">Get Well Wishes</a></li>
+    <li><a href="#careers">Funny</a></li>
+    <li><a href="#contact">Quotes</a></li>
   </ul>
 </nav>
 
