--- a/crotchet-files/get-well-index2.html
+++ b/crotchet-files/get-well-index2.html
@@ -46,6 +46,8 @@
     <li><a href="#about">Get Well Wishes</a></li>
     <li><a href="#careers">Funny</a></li>
     <li><a href="#contact">Quotes</a></li>
+    <li><a href="#contact">Poems</a></li>
+    <li><a href="#contact">Prayers</a></li>
   </ul>
 </nav>
 
