--- a/crotchet-files/get-well-index2.html
+++ b/crotchet-files/get-well-index2.html
@@ -44,10 +44,12 @@
   <ul class="menu">
     <li><a href="#work">Home</a></li>
     <li><a href="#about">Get Well Wishes</a></li>
-    <li><a href="#careers">Funny</a></li>
-    <li><a href="#contact">Quotes</a></li>
-    <li><a href="#contact">Poems</a></li>
-    <li><a href="#contact">Prayers</a></li>
+    <li><a href="#careers">Funny Wishes</a></li>
+    <li><a href="#careers">For a Friend</a></li>
+    <li><a href="#careers">For a Pet</a></li>
+    <li><a href="#contact">Get Well Quotes</a></li>
+    <li><a href="#contact">Get Well Poems</a></li>
+    <li><a href="#contact">Get Well Prayers</a></li>
   </ul>
 </nav>
 
